Fix projects overflow bug

--- a/style.css
+++ b/style.css
@@ -194,8 +194,6 @@ i.skillIconOnline::before {
     height: auto;
     width: 60%;
     aspect-ratio: 16 / 9;
-    /* margin-left: 10px; */
-    /* background-color: blue; */
 
     display: flex;
     justify-content: center;
@@ -765,7 +763,7 @@ i.skillIconOnline::before {
     justify-content: center;
     background-color: #f2f5ef;
 
-    padding-bottom: 0.3rem;
+    padding-bottom: 0.5rem;
 
 }
 
@@ -778,7 +776,7 @@ i.skillIconOnline::before {
     background-color: #f2f5ef;
 
     padding-top: 5rem;
-    padding-bottom: 0.3rem;
+    padding-bottom: 0.5rem;
 }
 
 #projectPage{
@@ -788,10 +786,10 @@ i.skillIconOnline::before {
     justify-content: start;
     background-color: #f2f5ef;
     height: 105vh;
-    border-radius: 7px;
+    border-radius: 0 0 7px 7px;
 
     padding-top: 5rem;
-    overflow:visible;
+    overflow: visible;
 }
 
 #contactPage{
@@ -937,6 +935,7 @@ i.skillIconOnline::before {
 
 #slideFather{
     height: 100%;
+    overflow: hidden;
 }
 
 
@@ -1031,10 +1030,6 @@ i.skillIconOnline::before {
         width: 80vw;
     }
 
-    #slideFather{
-        height: 55vh;
-    }
-
     .skillBox{
         /* min-width: 22vw; */
         min-width: 30vw;
@@ -1065,8 +1060,12 @@ i.skillIconOnline::before {
 /*  Projects Page */
 @media (max-width: 768px) {
 
+    #slideFather{
+        height: 80vh;
+    }
+
     #nextButton, #prevButton{
-        top: 105%;
+        top: 85%;
     }
 
     #nextButton:focus, #prevButton:focus {
@@ -1117,8 +1116,7 @@ i.skillIconOnline::before {
 
     #contactBigBox{
         width: 80%;
-        margin-bottom: 0;
-        margin-top: 10rem;
+        margin-bottom: 5 rem;
     }
 
     #contactMessage{
